--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "scope",
   "version": "1.0.0",
   "description": "Chutiya project",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"nodemon src/index.js"
   },
   "author": "Sumit",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
